--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -5,8 +5,13 @@ project(HUAR)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED On)
 
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
 set(SOURCES
-    src/test.cpp
+    src/jWindow.cpp
+    src/jPipeline.cpp
+    src/jApp.cpp
+    src/main.cpp
 )
 
 find_package(fmt CONFIG REQUIRED)
